Fixes and refactor - gitignore - validation - listeners

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="root"></div>
 <script src="handlebars/dist/handlebars.runtime.js"></script>
-<script src="components/Card/Card.precompiled.js"></script>
+<script src="components/Cards/Cards.precompiled.js"></script>
 <script src="components/CardHeader/CardHeader.precompiled.js"></script>
 <script src="components/Header/Header.precompiled.js"></script>
 <script src="components/Store/Store.precompiled.js"></script>
