--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,5 @@
 
 <body>
     <div id="root"></div>
-    <script type="module" src="/static/bundle.js"></script>
+    <script type="module" src="../dist/bundle.js"></script>
 </body>
