--- a/support/public/index.html
+++ b/support/public/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script type="module" src="../dist/bundle.js"></script>
+    <script type="module" src="../dist/bundleSupport.js"></script>
 </body>
 </html>
